WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
39031
CSSParser::parseColor() shouldn't alter 'color' unless passed a valid color string.
https://bugs.webkit.org/show_bug.cgi?id=39031
Summary
CSSParser::parseColor() shouldn't alter 'color' unless passed a valid color s...
Andreas Kling
Reported
2010-05-12 15:54:14 PDT
So says the comment above the function: // color will only be changed when string contains a valid css color, making it // possible to set up a default color.
Attachments
Proposed patch
(1.03 KB, patch)
2010-05-12 16:03 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Proposed patch v2
(2.71 KB, patch)
2010-05-12 18:45 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-05-12 16:03:22 PDT
Created
attachment 55910
[details]
Proposed patch
Andreas Kling
Comment 2
2010-05-12 16:26:16 PDT
I can't think of a good way to LayoutTest this, but it doesn't break any existing tests and is obviously correct (famous last words..)
Darin Adler
Comment 3
2010-05-12 18:21:59 PDT
Comment on
attachment 55910
[details]
Proposed patch How did you check all the call sites to make sure that none were depending on the old behavior?
Andreas Kling
Comment 4
2010-05-12 18:45:37 PDT
Created
attachment 55927
[details]
Proposed patch v2 By insufficient grepping, apparently. :( Updated patch to remove dependency on old behavior.
Darin Adler
Comment 5
2010-05-12 22:33:14 PDT
Comment on
attachment 55927
[details]
Proposed patch v2 Looks OK. r=me
WebKit Commit Bot
Comment 6
2010-05-14 07:47:22 PDT
Comment on
attachment 55927
[details]
Proposed patch v2 Clearing flags on attachment: 55927 Committed
r59473
: <
http://trac.webkit.org/changeset/59473
>
WebKit Commit Bot
Comment 7
2010-05-14 07:47:28 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 8
2010-05-14 08:40:04 PDT
Revision
r59473
cherry-picked into qtwebkit-2.0 with commit 2b20c8dabe7670fe4c99b83156cdd5f4544c8c30
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug