2010-05-14  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Darin Adler.

        CSSParser::parseColor() shouldn't alter 'color' unless passed a valid color string.
        https://bugs.webkit.org/show_bug.cgi?id=39031

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseColor):
        * editing/ApplyStyleCommand.cpp:
        (WebCore::StyleChange::extractTextStyles): Don't depend on old behavior.
        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::setShadow): Remove dead code.

Canonical link: https://commits.webkit.org/50627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59473 268f45cc-cd09-0410-ab3c-d52691b4dbfc