WebCore/css/CSSParser.cpp
@@ -284,7 +284,6 @@ bool CSSParser::parseValue(CSSMutableStyleDeclaration* declaration, int id, cons
 // possible to set up a default color.
 bool CSSParser::parseColor(RGBA32& color, const String& string, bool strict)
 {
-    color = 0;
     CSSParser parser(true);
 
     // First try creating a color specified by name or the "#" syntax.
